# rust-course

./: README.md  shared_ownership
Chapter-1-Fundamentals/: Cargo.toml
Chapter-1-Fundamentals/src/: bill_manager.rs  main  main.rs
ZTM/: Cargo.toml
ZTM/src/: bill_manager  bill_manager.rs  channels_activity.rs  crates.rs  main  main.rs  other_lang_features.rs  parallel_execution  parallel_execution.rs  readability  readability.rs  shared_functionality  shared_functionality.rs  shared_ownership.rs  standard_library_tour  standard_library_tour.rs  trytypes.rs
ZTM_ClipStash_Project/: Cargo.toml
ZTM_ClipStash_Project/src/lib/data/domain/clip/: mod.rs
ZTM_ClipStash_Project/src/lib/data/domain/clip/field/: content.rs  hits.rs  mod.rs
