[package]
name = "ZTM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to include bill_manager.rs in the module tree

[dependencies]
rgb = "0.8.36"
thiserror = "*"
crossbeam-channel = "0.5.7"
parking_lot = "0.12.1"
dotenv = "0.15.0"
serde = "1.0.153"
serde_derive = "1.0.153"
