[package]
name = "ZTM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to include bill_manager.rs in the module tree

[dependencies]
rgb = "0.8.36"
thiserror = "*"
crossbeam-channel = "0.5.7"
parking_lot = "0.12.1"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
cached = "0.42.0"
regex = "1.7.1"
chrono = "0.4.23"
strum = { version = "0.24.1", features = ["derive"] }
rayon = "1.7.0"
derive_more = "0.99.17"
